--- a/notebooks/JavaScript_Canvas_Fingerprinting.ipynb
+++ b/notebooks/JavaScript_Canvas_Fingerprinting.ipynb
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mark the canvas fingerprintin scripts\n",
+    "# Mark canvas fingerprinting scripts in the dataframe\n",
     "js[\"canvas_fp\"] = js[\"script_url\"].map(lambda x: x in canvas_fingerprinters)\n",
     "# Extract first arguments of function calls as a separate column\n",
     "js[\"arg0\"] = js[\"arguments\"].map(lambda x: json.loads(x)[\"0\"] if x else \"\")"
