Run cells in order.

--- a/notebooks/Canvas-Fingerprinting.ipynb
+++ b/notebooks/Canvas-Fingerprinting.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
        "      <td></td>\n",
        "      <td>window.navigator.userAgent</td>\n",
        "      <td>get</td>\n",
-       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...</td>\n",
+       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0</td>\n",
        "      <td>None</td>\n",
        "      <td>2018-06-27T14:19:39.880Z</td>\n",
        "      <td>google.co.in</td>\n",
@@ -160,7 +160,7 @@
        "      <td></td>\n",
        "      <td>window.navigator.userAgent</td>\n",
        "      <td>get</td>\n",
-       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...</td>\n",
+       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0</td>\n",
        "      <td>None</td>\n",
        "      <td>2018-06-27T14:19:39.880Z</td>\n",
        "      <td>google.co.in</td>\n",
@@ -180,7 +180,7 @@
        "      <td></td>\n",
        "      <td>window.navigator.userAgent</td>\n",
        "      <td>get</td>\n",
-       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...</td>\n",
+       "      <td>Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0</td>\n",
        "      <td>None</td>\n",
        "      <td>2018-06-27T14:19:39.882Z</td>\n",
        "      <td>google.co.in</td>\n",
@@ -210,15 +210,15 @@
        "1  window.navigator.userAgent       get   \n",
        "2  window.navigator.userAgent       get   \n",
        "\n",
-       "                                               value arguments  \\\n",
-       "0  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...      None   \n",
-       "1  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...      None   \n",
-       "2  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko...      None   \n",
+       "                                                                  value  \\\n",
+       "0  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0   \n",
+       "1  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0   \n",
+       "2  Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0   \n",
        "\n",
-       "                 time_stamp    script_ps1  \n",
-       "0  2018-06-27T14:19:39.880Z  google.co.in  \n",
-       "1  2018-06-27T14:19:39.880Z  google.co.in  \n",
-       "2  2018-06-27T14:19:39.882Z  google.co.in  "
+       "  arguments                time_stamp    script_ps1  \n",
+       "0      None  2018-06-27T14:19:39.880Z  google.co.in  \n",
+       "1      None  2018-06-27T14:19:39.880Z  google.co.in  \n",
+       "2      None  2018-06-27T14:19:39.882Z  google.co.in  "
       ]
      },
      "execution_count": 5,
@@ -432,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "500911it [00:03, 146182.20it/s]\n"
+      "500911it [00:03, 151664.73it/s]\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3429,7 +3429,7 @@
        "495010                                                      Cwm fjordbank glyphs vext quiz, 😃  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3441,13 +3441,6 @@
     "  ].rename({\"arg0\": \"canvas_text\"}, axis='columns')[[\"top_level_url\", \"script_ps1\", \"canvas_text\"]].\\\n",
     "        drop_duplicates()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
